# advent

./: README.md  core.html  core.html.md  environment.yml  index.html  index.html.md  pyproject.toml  robots.txt  search.json  settings.ini  sitemap.xml  spec-file.txt
2024/: 1_1.py  1_2.py  2_1.py  2_2.py  3_1.py  3_2.py  4_1.py  4_2.html  4_2.md
advent/: _modidx.py
advent/2024/: 1_1.py  1_2.py  2_1.py  2_2.py  3_1.py  3_2.py  4_1.py
nbs/: 00_core.ipynb  index.ipynb  nbdev.yml  sidebar.yml
nbs/2024/: 4_2.ipynb
